[project]
name = "comfy-script"
version = "0.6.1"
description = "A Python frontend and library for ComfyUI"
readme = "README.md"
# ComfyUI: >=3.8
# comfyui: >=3.9
# >=3.6 is required to preserve insertion order of input types
requires-python = ">=3.9"
authors = [
  { name="Chaoses-Ib", email="Chaos-es@outlook.com" },
]
keywords = ["comfyui"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# There is no mandatory dependencies

client = [
  # Already required by ComfyUI
  "aiohttp",
  # Used by aiohttp
  "yarl",

  # 1.5.9: https://github.com/erdewit/nest_asyncio/issues/87
  "nest_asyncio2 ~= 1.0, >= 1.6.3",

  # Already required by ComfyUI
  "Pillow",

  "aenum ~= 3.1"
]

# Transpiler
transpile = [
  # Already required by ComfyUI (torch)
  "networkx[default] ~= 3.0",

  # Used to get nodes info
  "comfy-script[client]",

  "dynaconf ~= 3.0",
]

# Runtime
runtime = [
  # Already required by ComfyUI
  "Pillow",
  "tqdm ~= 4.0",

  "wrapt ~= 1.0",

  "comfy-script[client]",

  # Used to save script to images
  "comfy-script[transpile]",
]

# Addtional nodes
# See docs/Nodes/README.md for details 
nodes = [
  "ComfyUI_Ib_CustomNodes >= 0.2.3",
  "comfyui-tooling-nodes",
  "civitai_comfy_nodes",
]

# Everything except UI (Jupyter and CLI)
no-ui = [
  "comfy-script[client]",
  "comfy-script[transpile]",
  "comfy-script[runtime]",
  "comfy-script[nodes]",
]

# Jupyter Notebook UI
jupyter = [
  "ipywidgets ~= 8.1",

  # Already required by ComfyUI
  "Pillow",

  "tqdm[notebook] ~= 4.0",
]

default = [
  "comfy-script[no-ui]",
  "comfy-script[cli]",
  "comfy-script[jupyter]",
]

# CLI
# Currently, only transpiler has CLI.
cli = [
  "click ~= 8.1",
]

# Solara UI
solara = [
  "solara-ui[markdown] ~= 1.33",
  # Already required by ComfyUI
  "Pillow",
]

all = [
  "comfy-script[default]",
  "comfy-script[cli]",
  "comfy-script[solara]",
]

[project.urls]
Homepage = "https://github.com/Chaoses-Ib/ComfyScript"
Issues = "https://github.com/Chaoses-Ib/ComfyScript/issues"

[project.entry-points."comfyui.custom_nodes"]
# https://github.com/comfyanonymous/ComfyUI/pull/298
comfy_script = "comfy_script.nodes"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# TODO: Exclude docs and examples in sdist?

[tool.hatch.envs.test]
features = [
  "default",
]
dependencies = [
  "pytest"
]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]